--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -1,4 +1,12 @@
 @media screen and (max-width: 767px) {
+  .main__title {
+    font-size: map-get($font-sizes, h3);
+    line-height: 3rem;
+  }
+  .contact__title {
+    font-size: map-get($font-sizes, h4);
+    line-height: 2rem;  
+  }
   li {
     padding: 0 0 2vh 0;
   }
@@ -58,14 +66,14 @@
   } 
 }
 
-@media screen and (max-width: 1200px) {
-  .main__title {
-    font-size: map-get($font-sizes, h2);
-  }
-  .contact__title {
-    font-size: map-get($font-sizes, h4);
-    }
-}
+// @media screen and (max-width: 1200px) {
+//   .main__title {
+//     font-size: map-get($font-sizes, h2);
+//   }
+//   .contact__title {
+//     font-size: map-get($font-sizes, h3);
+//   }
+// }
 
 @media screen and (min-width: 1024px) {
   .artists__wrap .gridy-1 {
