--- a/scss/_text.scss
+++ b/scss/_text.scss
@@ -63,10 +63,17 @@ h1 {
 
 h2 {
   font-size: map-get($font-sizes, h2);
+  line-height: 4rem;
 }
 
 h3 {
   font-size: map-get($font-sizes, h3);
+  line-height: 2rem;  
+}
+
+h4 {
+  font-size: map-get($font-sizes, h4);
+  line-height: 1rem;  
 }
 
 p {
