Más cambios en el CSS

--- a/views/john-singer-sargent.html
+++ b/views/john-singer-sargent.html
@@ -99,6 +99,6 @@
     <!-- Flipster -->
     <script src="../dist/js/jquery.flipster.min.js"></script>
     <!-- Fontawesome -->
-    <script src="https://kit.fontawesome.com/ae54c90eda.js" crossorigin="anonymous"></script>>
+    <script src="https://kit.fontawesome.com/ae54c90eda.js" crossorigin="anonymous"></script>
   </body>
 </html>
