--- a/views/artistas.html
+++ b/views/artistas.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8">
-    <title>Diego Velázquez - Galería de Arte</title>
+    <title>Artistas - Galería de Arte</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Alexia Glibota">
