--- a/views/artistas.html
+++ b/views/artistas.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Alexia Glibota">
-    <meta name="description" content="Galería de arte virtual, pensada para acercarte las obras más emblemáticas de los artistas que hicieron historia.">
+    <meta name="description" content="Galería de arte virtual, pensada para acercarte las obras más emblemáticas de los artistas que hicieron historia">
     <meta name="keywords" content="arte, galería de arte, old masters, art, painting, pintura, óleo, pintura al óleo">
     <link rel="icon" type="image/png" href="../img/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="../../dist/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../../dist/css/jquery.flipster.css">
-    <link rel="stylesheet" type="text/css" href="../../dist/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../dist/css/jquery.flipster.css">
+    <link rel="stylesheet" type="text/css" href="../dist/css/main.css">
   </head>
   <body>
     <div class="cursor-dot-outline"></div>
