--- a/views/gracias.html
+++ b/views/gracias.html
@@ -43,7 +43,7 @@
     <section id="contact" class="d-flex align-items-center contact section">
       <div class="container">
         <div class="row justify-content-center align-items-center">
-          <h2 class="contact__title text-white text-center">¡Gracias por ayudarnos! Trataremos de responderte lo antes posible.</h2>
+          <h2 class="contact__title text-white text-center">¡Gracias por ayudarnos! Trataremos de responderte lo antes posible</h2>
           <a class="cta-btn p-4" href="../index.html">Volver al inicio</a>
         </div>  
       </div>
