--- a/views/contacto.html
+++ b/views/contacto.html
@@ -10,9 +10,9 @@
     <meta name="keywords" content="arte, galería de arte, old masters, art, painting, pintura, óleo, pintura al óleo">
     <link rel="icon" type="image/png" href="../img/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="../../dist/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../../dist/css/jquery.flipster.css">
-    <link rel="stylesheet" type="text/css" href="../../dist/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../dist/css/jquery.flipster.css">
+    <link rel="stylesheet" type="text/css" href="../dist/css/main.css">
   </head>
   <body>
     <div class="cursor-dot-outline"></div>
