--- a/scss/_files.scss
+++ b/scss/_files.scss
@@ -13,6 +13,7 @@
     &__title {
       font-size: map-get($font-sizes, h2);
       color: $color-white;
+      margin-bottom: 1.2rem;
     }
     &__paragraph {
       color: $color-white;
