--- a/views/gracias.html
+++ b/views/gracias.html
@@ -10,9 +10,9 @@
     <meta name="keywords" content="arte, galería de arte, old masters, art, painting, pintura, óleo, pintura al óleo">
     <link rel="icon" type="image/png" href="../img/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="../../dist/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../../dist/css/jquery.flipster.css">
-    <link rel="stylesheet" type="text/css" href="../../dist/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../dist/css/jquery.flipster.css">
+    <link rel="stylesheet" type="text/css" href="../dist/css/main.css">
   </head>
   <body>
     <div class="cursor-dot-outline"></div>
@@ -30,6 +30,9 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
+                  <a class="nav-link effect-underline" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item active">
                   <a class="nav-link effect-underline" href="artistas.html">Artistas</a>
                 </li>
                 <li class="nav-item active">
@@ -43,7 +46,7 @@
     <section id="contact" class="d-flex align-items-center contact section">
       <div class="container">
         <div class="row justify-content-center align-items-center">
-          <h2 class="contact__title text-white text-center">¡Gracias por ayudarnos! Trataremos de responderte lo antes posible</h2>
+          <h3 class="contact__title text-white text-center">¡Gracias por ayudarnos! Trataremos de responderte lo antes posible</h3>
           <a class="cta-btn p-4" href="../index.html">Volver al inicio</a>
         </div>  
       </div>
