--- a/views/john-singer-sargent.html
+++ b/views/john-singer-sargent.html
@@ -30,6 +30,9 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
+                  <a class="nav-link effect-underline" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item active">
                   <a class="nav-link effect-underline" href="artistas.html">Artistas</a>
                 </li>
                 <li class="nav-item active">
@@ -52,7 +55,7 @@
               </h1>
               <p class="file__paragraph">
                 John Singer Sargent (Florencia, 12 de enero de 1856 – 14 de abril de 1925) fue un pintor estadounidense,
-                considerado el "retratista de más éxito de su generación".1​2​ Durante su carrera, realizó cerca de 900 pinturas al óleo
+                considerado el "retratista de más éxito de su generación". Durante su carrera, realizó cerca de 900 pinturas al óleo
                 y más de 2.000 acuarelas, así como innumerables bocetos y dibujos al carboncillo. Su obra documenta sus viajes a lo largo del mundo,
                 desde Venecia al Tirol, Corfú, Oriente Próximo, Montana, Maine y Florida. Sus padres eran estadounidenses,
                 pero él se formó en París antes de trasladarse a Londres. Sargent disfrutó del aplauso internacional como retratista,
