--- a/views/rembrandt-harmenszoon.html
+++ b/views/rembrandt-harmenszoon.html
@@ -30,6 +30,9 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
+                  <a class="nav-link effect-underline" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item active">
                   <a class="nav-link effect-underline" href="artistas.html">Artistas</a>
                 </li>
                 <li class="nav-item active">
