--- a/scss/_artists.scss
+++ b/scss/_artists.scss
@@ -14,7 +14,7 @@
 
 .artists {
   padding: 0;
-  overflow: initial !important;
+  background-color: $color-main;
 }
 
 .artists__wrap div[class*=gridy] {
