--- a/views/contacto.html
+++ b/views/contacto.html
@@ -5,7 +5,7 @@
     <title>Contacto - Galería de Arte</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Alexia Glibota">
+    <meta name="author" content="Alexia G. Conti">
     <meta name="description" content="Galería de arte virtual, pensada para acercarte las obras más emblemáticas de los artistas que hicieron historia.">
     <meta name="keywords" content="arte, galería de arte, old masters, art, painting, pintura, óleo, pintura al óleo">
     <link rel="icon" type="image/png" href="../img/favicon.png">
@@ -74,7 +74,11 @@
                 <textarea class="form-control text-white" name="message" rows="10" id="message" data-rule="required" data-msg="Por favor, escribí el mensaje."></textarea>
                 <div class="validate"></div>
               </div>
-              <div class="text-center"><button type="submit" class="p-4">Enviar</button></div>
+              <div class="text-center">
+                <a href="gracias.html">
+                  <button type="submit" class="p-4">Enviar</button>
+                </a>
+              </div>
             </form>
           </div>
         </div>
