--- a/views/gracias.html
+++ b/views/gracias.html
@@ -5,7 +5,7 @@
     <title>Gracias - Galería de Arte</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Alexia Glibota">
+    <meta name="author" content="Alexia G. Conti">
     <meta name="description" content="Galería de arte virtual, pensada para acercarte las obras más emblemáticas de los artistas que hicieron historia.">
     <meta name="keywords" content="arte, galería de arte, old masters, art, painting, pintura, óleo, pintura al óleo">
     <link rel="icon" type="image/png" href="../img/favicon.png">
